# serializer version: 1
# name: test_binary_sensors[binary_sensor.coe_digital_can1_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.coe_digital_can1_1',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'CoE Digital - CAN1 1',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'CoE Digital - CAN1 1',
    'platform': 'ta_coe',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'ta-coe-digital-can1-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[binary_sensor.coe_digital_can1_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'CoE Digital - CAN1 1',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.coe_digital_can1_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensors[binary_sensor.coe_digital_can20_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.coe_digital_can20_1',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'CoE Digital - CAN20 1',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'CoE Digital - CAN20 1',
    'platform': 'ta_coe',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'ta-coe-digital-can20-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[binary_sensor.coe_digital_can20_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'CoE Digital - CAN20 1',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.coe_digital_can20_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
